--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
   <body>
     <h1>My amazing website</h1>
     <p>Welcome!</p>
